--- a/css/payment.css
+++ b/css/payment.css
@@ -1,6 +1,3 @@
-head li{
-    
-}
 
 h1{
     font-size: 4rem;
@@ -76,9 +73,13 @@ section span{
     font-size: 12px;
 }
 
-hr{
-    border-bottom: 1px gray solid;
+.form-check-label{
+    margin-left: 10px;
 }
+
+/* hr{
+    border-bottom: 1px gray solid;
+} */
 
 
 
